1. 대괄호내 단어만을 추출한 '정제_작업명' column 완성 2. 정규식패턴에 부합하지 않는 값은 정수 0으로 넣었음 3. 해당 단어 수 시각화 필요

--- a/TANGO_구축_작업_키워드_분석.ipynb
+++ b/TANGO_구축_작업_키워드_분석.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNWD66/UoqABmeohO1kjXry",
+      "authorship_tag": "ABX9TyPo8/exXwL9dz/d3nKtZLvR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +67,7 @@
       "source": [
         "data = pd.read_excel('/content/drive/My Drive/Personal Project/TANGO 구축 작업 키워드 분석/20200101-20200731_TANGO 회선영향없음 키워드 주간 구축 작업.xlsx')\n",
         "# 분석 예정 컬럼 = ['작업명']\n",
-        "data['작업명'].loc[0]"
+        "data['작업명'].loc[4393]  # 만들어 놓은 정규식 패턴에 맞지 않는 작업명"
       ],
       "execution_count": null,
       "outputs": []
@@ -80,20 +80,15 @@
         "colab": {}
       },
       "source": [
-        "# DATA 전처리\n",
-        "\n",
-        "\n",
-        "# 대괄호 내부 텍스트만 추출\n",
+        "# 정규식 패턴에 부합하는 작업명 추출 함수\n",
         "import re\n",
         "def get_regex_matching_text(text):\n",
-        "    text_in_square_backet_regex = re.compile(r'\\[{1}.+\\]{1}')\n",
-        "    result = text_in_square_backet_regex.findall(text)[0].replace('][', '|').replace('[', '').replace(']', '').split('|')\n",
-        "    return result\n",
-        "\n",
-        "for name in data['작업명']:\n",
-        "\n",
-        "test_text = 'T주-S0303 [5G-PON][장비_증설_회선영향없음]_SSKB구리_C12M1C53L(인장로주공)_H_인창한진AAUD_1_COT유니트 증설_건우통신(C200730002125)'\n",
-        "get_regex_matching_text(test_text)"
+        "    text_in_square_backet_regex = re.compile(r'\\[{1}.+\\]{1}')  # 정규식 패턴 : 대괄호내 어떠한 단어라도 들어가있으면 부합\n",
+        "    matched_text = text_in_square_backet_regex.search(text)\n",
+        "    if matched_text:  # 정규식 패턴에 부합하는 작업명을 지닌 경우\n",
+        "        return matched_text.group()\n",
+        "    else:  # 정규식 패턴에 부합하는 부분을 전혀 가지지 않은 작업명의 경우 None을 반환하므로, pass\n",
+        "        pass"
       ],
       "execution_count": null,
       "outputs": []
@@ -101,12 +96,42 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IbjHTIEfBe8a",
+        "id": "r9OBHhW7pNOR",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "data[data['작업명'].apply(get_regex_matching_text).isnull() == True]  # 정규식패턴에 맞지 않는 row 확인(index = 4393)\n",
+        "data['정제_작업명'] = data['작업명'].apply(get_regex_matching_text)  # 정규식화 함수를 거친 새로운 columns 생성\n",
+        "\n",
+        "# 대괄호 제거 후 내부 단어만 추출\n",
+        "def get_rid_of_square_bracket(text):\n",
+        "    if text:  # refined_text가 None이 아닌 경우만 대괄호 제거 후 정제\n",
+        "        return text.replace('][', '|').lstrip('[').rstrip(']').split('|')\n",
+        "    else:\n",
+        "        return 0\n",
+        "data['정제_작업명'] = data['정제_작업명'].apply(get_rid_of_square_bracket)\n",
+        "data['정제_작업명'].loc[4390:4400]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IS_cUJ3bu6oA",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# '정제_작업명' column에서 회선영향없음 포함하는 값은 삭제\n",
+        "def re_refinement(value):\n",
+        "    if type(value) is list:\n",
+        "        return [i for i in value if len(i) != 1 if '회선영향없음' not in i]\n",
+        "    else:\n",
+        "        pass\n",
+        "\n",
+        "data['정제_작업명'] = data['정제_작업명'].apply(re_refinement)  # 최종 정제된 단어 리스트를 value로 가지는 column 완성"
       ],
       "execution_count": null,
       "outputs": []
