1. 빈도율 포함한 df 구성 완료 2. A망 관련 키워드 제거 후 전송 관련 키워드만으로 추린 후 재시각화 필요   - 예를들어 전송 관련 키워드만 모은 df의 빈도율 10% 이상인 놈들만 시각화 하는 방식 등으로

--- a/TANGO_구축_작업_키워드_분석.ipynb
+++ b/TANGO_구축_작업_키워드_분석.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPo8/exXwL9dz/d3nKtZLvR",
+      "authorship_tag": "ABX9TyPW14c6IkcmQZ5T2BwF0Ceq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -132,6 +132,100 @@
         "        pass\n",
         "\n",
         "data['정제_작업명'] = data['정제_작업명'].apply(re_refinement)  # 최종 정제된 단어 리스트를 value로 가지는 column 완성"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MRVqPgL19-D7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# 시각화 한글 깨짐 해소\n",
+        "!sudo apt-get install -y fonts-nanum\n",
+        "!sudo fc-cache -fv\n",
+        "!rm ~/.cache/matplotlib -rf\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SxUgJ3Hq4W_E",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import seaborn as sns\n",
+        "from matplotlib import pyplot as plt\n",
+        "%matplotlib inline\n",
+        "plt.rc('font', family='NanumBarunGothic')  # 한글 폰트 깨짐 해소\n",
+        "\n",
+        "# 텍스트별 갯수 시각화\n",
+        "job_title_list = []\n",
+        "\n",
+        "for job_title in data['정제_작업명']:  # 정제_작업명 value dtype is list\n",
+        "    if job_title:\n",
+        "        for title in job_title:\n",
+        "            job_title_list.append(title)\n",
+        "\n",
+        "for index, value in enumerate(job_title_list):\n",
+        "    if len(value) > 7:\n",
+        "        # print(value)\n",
+        "        del(job_title_list[index])\n",
+        "\n",
+        "plt.figure(figsize=(30,10))\n",
+        "plt.subplot()\n",
+        "sns.countplot(x=job_title_list)\n",
+        "plt.show()\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lS_2AKIm-3HZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# 키워드들의 종류가 너무 많이 분석 힘드므로, 빈도수 분석부터 시행\n",
+        "import collections\n",
+        "\n",
+        "keyword_counter = collections.Counter(job_title_list)\n",
+        "keyword_counter = keyword_counter.most_common()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "w0Uu0VQtzksp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# 빈도율 삽입\n",
+        "# 전체 row 갯수 : 4954\n",
+        "dataframe_form_dict = {'키워드': [],\n",
+        "                       '빈도수': [],\n",
+        "                       '빈도율(%)': []}\n",
+        "for word, freq in keyword_counter:\n",
+        "    freq_rate = round(freq / 4954 * 100)  # 단어 빈도율 계산\n",
+        "    freq_rate_str = str(freq_rate) + '%'  # 단어 빈도율 문자열로 변경 후 % 붙힘\n",
+        "    dataframe_form_dict['키워드'].append(word)\n",
+        "    dataframe_form_dict['빈도수'].append(freq)\n",
+        "    dataframe_form_dict['빈도율(%)'].append(freq_rate_str)\n",
+        "# print(dataframe_form_dict)\n",
+        "\n",
+        "df = pd.DataFrame(dataframe_form_dict)\n",
+        "df.head()"
       ],
       "execution_count": null,
       "outputs": []
