--- a/TANGO_구축_작업_키워드_분석.ipynb
+++ b/TANGO_구축_작업_키워드_분석.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPW14c6IkcmQZ5T2BwF0Ceq",
+      "authorship_tag": "ABX9TyM+AcISko5hFQAAcCkTP5Me",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -178,7 +178,7 @@
         "        # print(value)\n",
         "        del(job_title_list[index])\n",
         "\n",
-        "plt.figure(figsize=(30,10))\n",
+        "plt.figure(figsize=(16,6))\n",
         "plt.subplot()\n",
         "sns.countplot(x=job_title_list)\n",
         "plt.show()\n"
@@ -194,7 +194,7 @@
         "colab": {}
       },
       "source": [
-        "# 키워드들의 종류가 너무 많이 분석 힘드므로, 빈도수 분석부터 시행\n",
+        "# 키워드들의 종류가 너무 많아 시각화 분석이 힘드므로, 빈도수 분석부터 시행\n",
         "import collections\n",
         "\n",
         "keyword_counter = collections.Counter(job_title_list)\n",
@@ -224,8 +224,69 @@
         "    dataframe_form_dict['빈도율(%)'].append(freq_rate_str)\n",
         "# print(dataframe_form_dict)\n",
         "\n",
-        "df = pd.DataFrame(dataframe_form_dict)\n",
-        "df.head()"
+        "result_df = pd.DataFrame(dataframe_form_dict)\n",
+        "result_df.head()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y_Y3KHysT3JW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# 데이터 전처리(불필요키워드 제거)\n",
+        "result_df['키워드'].unique()  # 전체 키워드 확인\n",
+        "\n",
+        "unnecessary_keyword = [word for word in list(result_df['키워드']) if ' ' in word] # 단어 사이에 띄워쓰기 있는 불필요 키워드 발췌\n",
+        "unnecessary_keyword += ['실사', '긴급', '접속', 'SKB', '중심국출입', '선번조사', '발란싱', '옥외랙', '긴급]', '위탁사업', '중심국출입요청', '군포통합국', 'OJC', 'IPD', 'PCM']  # 불필요 단어 발췌 후 추가\n",
+        "\n",
+        "for keyword in unnecessary_keyword:  # 전체 발췌 불필요 키워드 제거\n",
+        "    result_df = result_df[result_df['키워드'] != keyword]\n",
+        "\n",
+        "result_df.head(10)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Lcwh5_u7PWbm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# 데이터 전처리(A망 키워드 제거)\n",
+        "result_df['키워드'].unique()\n",
+        "access_keyword = ['5G-PON', '링먹스', '5GPON', 'SMUX', '5G-PON2', 'CPRIMW', 'S-DDF', 'SDDF', 'DDF', 'S-MUX', '선로점검']  # A망 관련 키워드\n",
+        "for keyword in access_keyword:\n",
+        "    result_df = result_df[result_df['키워드'] != keyword]\n",
+        "result_df = result_df.reset_index(drop=True)\n",
+        "result_df.head(10)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2bKGvFbfe1BT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# iRMS 관련 키워드로만 구성\n",
+        "irms_keywords = ['정류기', '부대공사', '부대물자', 'RMS', '부대시설', '축전지', '리튬']\n",
+        "\n",
+        "irms_df = pd.DataFrame(columns=result_df.columns)\n",
+        "# irms_df.head()\n",
+        "for keyword in irms_keywords:\n",
+        "    irms_df = irms_df.append(result_df[result_df['키워드'] == keyword])\n",
+        "irms_df.reset_index(drop=True)"
       ],
       "execution_count": null,
       "outputs": []
