--- a/TANGO_구축_작업_키워드_분석.ipynb
+++ b/TANGO_구축_작업_키워드_분석.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM+AcISko5hFQAAcCkTP5Me",
+      "authorship_tag": "ABX9TyMmfWEXRjyHTaGYqTYl3s4p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -264,9 +264,10 @@
         "result_df['키워드'].unique()\n",
         "access_keyword = ['5G-PON', '링먹스', '5GPON', 'SMUX', '5G-PON2', 'CPRIMW', 'S-DDF', 'SDDF', 'DDF', 'S-MUX', '선로점검']  # A망 관련 키워드\n",
         "for keyword in access_keyword:\n",
-        "    result_df = result_df[result_df['키워드'] != keyword]\n",
+        "    result_df = result_df[result_df['키워드'] != keyword]  # A망 키워드 제거\n",
         "result_df = result_df.reset_index(drop=True)\n",
-        "result_df.head(10)"
+        "result_df.head(10)\n",
+        "result_df['빈도수'].sum()"
       ],
       "execution_count": null,
       "outputs": []
@@ -285,8 +286,9 @@
         "irms_df = pd.DataFrame(columns=result_df.columns)\n",
         "# irms_df.head()\n",
         "for keyword in irms_keywords:\n",
-        "    irms_df = irms_df.append(result_df[result_df['키워드'] == keyword])\n",
-        "irms_df.reset_index(drop=True)"
+        "    irms_df = irms_df.append(result_df[result_df['키워드'] == keyword])  # iRMS 관련 키워드 추출\n",
+        "irms_df.reset_index(drop=True)\n",
+        "irms_df['빈도수'].sum() / 4954 * 100"
       ],
       "execution_count": null,
       "outputs": []
